Убрал лишнее из header
Сделал HTML header в body компактнее, сделал все в одном варианте, убрал варианты header для разных разрешений.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,40 +8,27 @@
   <link rel="shortcut icon" href="img/logo.svg" type="image/x-icon">
   <title>Услуги и сервисы</title>
 </head>
-<body>
-  <header>
-    <!-- For mobile -->
-    <section class="upper-menu visibility--320-768">
-      <div class="upper-menu__part">
-        <button class="round-button round-button--icon--burger"></button>
-        <img src="img/logo.svg" alt="CPS" class="logo">
-      </div>
-      <div class="upper-menu__divider"></div>
-      <div class="upper-menu__part">
-        <button class="round-button round-button--icon--check-status"></button>
-        <button class="round-button round-button--icon--repair"></button>
-      </div>
-    </section>
-    
-    <!-- For pad -->
-    <section class="upper-menu visibility--768-1366">
-      <div class="upper-menu__part">
-        <button class="round-button round-button--icon--burger"></button>
-        <div class="upper-menu__divider"></div>
-        <img src="img/logo.svg" alt="CPS" class="logo">
-      </div>
-      <div class="upper-menu__part">
-        <button class="round-button round-button--icon--call"></button>
-        <button class="round-button round-button--icon--chat"></button>
-        <button class="round-button round-button--icon--profile"></button>
-        <div class="upper-menu__divider"></div>
-        <button class="round-button round-button--icon--repair"></button>
-        <button class="round-button round-button--icon--check-status"></button>
-      </div>
-    </section>
 
-    <h1 class="page-title visibility--320-768">Услуги и сервисы</h1>
-    
+<body>
+  <header class="upper-menu visibility--320-1365">
+
+    <div class="upper-menu__part">
+      <button class="round-button round-button--icon--burger upper-menu__part__round-button--r"></button>
+      <img src="img/logo.svg" alt="CPS">
+    </div>
+    <div class="upper-menu__part">
+      <button class="round-button round-button--icon--call visibility--768-1366"></button>
+      <button class="round-button round-button--icon--chat visibility--768-1366"></button>
+      <button class="round-button round-button--icon--profile upper-menu__part__round-button--r visibility--768-1366"></button>
+      <button class="round-button round-button--icon--repair visibility--320-max"></button>
+      <button class="round-button round-button--icon--check-status visibility--320-max"></button>
+    </div>
+
+  </header>
+  <main>
+
+    <h1 class="page-title visibility--320-1365">Услуги и сервисы</h1>
+
     <section class="main-info-header visibility--1366-max">
       <h1 class="page-title page-title--position">Услуги и сервисы</h1>
       <button class="btn-with-text">
@@ -63,14 +51,13 @@
         <li class="page-nav__element">Отзывы</li>
       </ul>
     </nav>
-  </header>
-  <main>
+
     <section>
       <figure class="main-info">
         <figcaption class="main-info__text">
           <span>
-            Мы являемся авторизованным сервисным центром по ремонту техники Dell. 
-            Только у нас вы можете отремонтировать свой ноутбук Dell с официальной 
+            Мы являемся авторизованным сервисным центром по ремонту техники Dell.
+            Только у нас вы можете отремонтировать свой ноутбук Dell с официальной
             гарантией производителя.
           </span>
 
@@ -79,9 +66,9 @@
           </span>
 
           <span class="main-info__text--position--indent visibility--1366-max">
-            Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, 
-            что подтверждает большое количество постоянных клиентов. Мы гордимся тем, 
-            что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным 
+            Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера,
+            что подтверждает большое количество постоянных клиентов. Мы гордимся тем,
+            что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным
             и близким.
           </span>
           <button class="expunder-btn">Читать далее</button>
@@ -94,4 +81,5 @@
 
   </footer>
 </body>
+
 </html>
