--- a/index.html
+++ b/index.html
@@ -10,76 +10,67 @@
 </head>
 
 <body>
-  <header class="upper-menu visibility--320-1365">
 
-    <div class="upper-menu__part">
-      <button class="round-button round-button--icon--burger upper-menu__part__round-button--r"></button>
-      <img src="img/logo.svg" alt="CPS">
-    </div>
-    <div class="upper-menu__part">
-      <button class="round-button round-button--icon--call visibility--768-1366"></button>
-      <button class="round-button round-button--icon--chat visibility--768-1366"></button>
-      <button class="round-button round-button--icon--profile upper-menu__part__round-button--r visibility--768-1366"></button>
-      <button class="round-button round-button--icon--repair visibility--320-max"></button>
-      <button class="round-button round-button--icon--check-status visibility--320-max"></button>
-    </div>
+  <section class="menu">
 
-  </header>
-  <main>
-
-    <h1 class="page-title visibility--320-1365">Услуги и сервисы</h1>
-
-    <section class="main-info-header visibility--1366-max">
-      <h1 class="page-title page-title--position">Услуги и сервисы</h1>
-      <button class="btn-with-text">
-        <span>Оставить заявку</span>
-        <div class="round-button round-button--icon--repair"></div>
+    <header class="menu-head">
+      <button class="btn btn--pic--close">
       </button>
-      <button class="btn-with-text">
-        <span>Статус ремонта</span>
-        <div class="round-button round-button--icon--check-status"></div>
-      </button>
-    </section>
+      <a href=""><img src="img/logo.svg" alt="CPS"></a>
+      <button class="btn btn--pic--search menu-head__btn--icon--search"></button>
+    </header>
 
-    <nav class="page-nav">
-      <ul class="page-nav__list">
-        <li class="page-nav__element page-nav__element--status--active">Ремонтируемые&nbsp;устройства</li>
-        <li class="page-nav__element">Ремонтируемые&nbsp;бренды</li>
-        <li class="page-nav__element">Цены&nbsp;на&nbsp;услуги</li>
-        <li class="page-nav__element">Адреса&nbsp;сервисных&nbsp;центров</li>
-        <li class="page-nav__element">Специальные&nbsp;цены</li>
-        <li class="page-nav__element">Отзывы</li>
-      </ul>
+    <nav class="cite-nav">
+      <li class="cite-nav__li">
+        <a href="" class="cite-nav__link cite-nav__link--active">Ремонт техники</a>
+      </li>
+      <li class="cite-nav__li">
+        <a href="" class="cite-nav__link">Услуги и сервисы</a>
+      </li>
+      <li class="cite-nav__li">
+        <a href="" class="cite-nav__link">Корпоративным клиентам</a>
+      </li>
+      <li class="cite-nav__li">
+        <a href="" class="cite-nav__link">Продавцам техники</a>
+      </li>
+      <li class="cite-nav__li">
+        <a href="" class="cite-nav__link">Партнерам</a>
+      </li>
+      <li class="cite-nav__li">
+        <a href="" class="cite-nav__link">Производителям</a>
+      </li>
+      <li class="cite-nav__li">
+        <a href="" class="cite-nav__link">Наши сервисные центры</a>
+      </li>
+      <li class="cite-nav__li">
+        <a href="" class="cite-nav__link">Контакты</a>
+      </li>
     </nav>
 
-    <section>
-      <figure class="main-info">
-        <figcaption class="main-info__text">
-          <span>
-            Мы являемся авторизованным сервисным центром по ремонту техники Dell.
-            Только у нас вы можете отремонтировать свой ноутбук Dell с официальной
-            гарантией производителя.
-          </span>
+    <footer class="footer menu__footer">
 
-          <span class="main-info__text--position--indent visibility--768-1366">
-            Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера
-          </span>
+      <div class="communication">
+        <button class="btn btn--pic--call"></button>
+        <button class="btn btn--pic--chat"></button>
+        <button class="btn btn--pic--profile"></button>
+      </div>
 
-          <span class="main-info__text--position--indent visibility--1366-max">
-            Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера,
-            что подтверждает большое количество постоянных клиентов. Мы гордимся тем,
-            что к нам обращаются по рекомендациям и, в свою очередь, советуют нас родным
-            и близким.
-          </span>
-          <button class="expunder-btn">Читать далее</button>
-        </figcaption>
-        <img class="main-info__picture" src="img/pic-cps.jpg" alt="Изображение логотипа фирмы.">
-      </figure>
-    </section>
-  </main>
-  <footer>
+      <div class="mail"><a href="mailto:mail@cps.com">mail@cps.com</a></div>
 
-  </footer>
+      <div class="phone"><a href="tel:+78008908900">8 800 890 8900</a></div>
+
+      <div class="lang">
+        <button class="lang__btn lang__btn--active">RU</button>
+        <button class="lang__btn">EN</button>
+        <button class="lang__btn">CH</button>
+      </div>
+
+    </footer>
+
+  </section>
+
+  <div class="blure"></div>
+
 </body>
 
 </html>
