--- a/index.html
+++ b/index.html
@@ -9,67 +9,82 @@
   <title>Услуги и сервисы</title>
 </head>
 
-<body>
+<body class="content-wrap">
 
-  <section class="menu">
+  <section class="brands swiper">
 
-    <header class="menu-head">
-      <button class="btn btn--pic--close">
-      </button>
-      <a href=""><img src="img/logo.svg" alt="CPS"></a>
-      <button class="btn btn--pic--search menu-head__btn--icon--search"></button>
-    </header>
+    <h2 class="brands__title">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h2>
 
-    <nav class="cite-nav">
-      <li class="cite-nav__li">
-        <a href="" class="cite-nav__link cite-nav__link--active">Ремонт техники</a>
+    <ol class="brands__list swiper-wrapper">
+      <li class="swiper-slide">
+        <a href="" class="brands__elem">
+          <img src="./img/pic-lenovo.svg" alt="">
+        </a>
       </li>
-      <li class="cite-nav__li">
-        <a href="" class="cite-nav__link">Услуги и сервисы</a>
+      <li class="swiper-slide">
+        <a href="" class="brands__elem">
+          <img src="./img/pic-samsung.svg" alt="">
+        </a>
       </li>
-      <li class="cite-nav__li">
-        <a href="" class="cite-nav__link">Корпоративным клиентам</a>
+      <li class="swiper-slide">
+        <a href="" class="brands__elem brands__elem--pic--apple">
+          <img src="./img/pic-apple.svg" alt="">
+        </a>
       </li>
-      <li class="cite-nav__li">
-        <a href="" class="cite-nav__link">Продавцам техники</a>
+      <li class="swiper-slide">
+        <a href="" class="brands__elem brands__elem--pic--acer">
+          <img src="./img/pic-acer.svg" alt="">
+        </a>
       </li>
-      <li class="cite-nav__li">
-        <a href="" class="cite-nav__link">Партнерам</a>
+      <li class="swiper-slide">
+        <a href="" class="brands__elem">
+          <img src="./img/pic-hp.png" alt="">
+        </a>
       </li>
-      <li class="cite-nav__li">
-        <a href="" class="cite-nav__link">Производителям</a>
+      <li class="swiper-slide">
+        <a href="" class="brands__elem brands__elem--pic--sony">
+          <img src="./img/pic-sony.svg" alt="">
+        </a>
       </li>
-      <li class="cite-nav__li">
-        <a href="" class="cite-nav__link">Наши сервисные центры</a>
+      <li class="swiper-slide">
+        <a href="" class="brands__elem">
+          <img src="./img/pic-lenovo.svg" alt="">
+        </a>
       </li>
-      <li class="cite-nav__li">
-        <a href="" class="cite-nav__link">Контакты</a>
+      <li class="swiper-slide">
+        <a href="" class="brands__elem">
+          <img src="./img/pic-samsung.svg" alt="">
+        </a>
       </li>
-    </nav>
+      <li class="swiper-slide">
+        <a href="" class="brands__elem brands__elem--pic--apple">
+          <img src="./img/pic-apple.svg" alt="">
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="" class="brands__elem brands__elem--pic--acer">
+          <img src="./img/pic-acer.svg" alt="">
+        </a>
+      </li>
+      <li class="swiper-slide">
+        <a href="" class="brands__elem">
+          <img src="./img/pic-hp.png" alt="">
+        </a>
+      </li>
+    </ol>
 
-    <footer class="footer menu__footer">
+    <button class="expunder brands__expunder">
+      <div class="expunder__pic"></div>
+      Показать все
+    </button>
 
-      <div class="communication">
-        <button class="btn btn--pic--call"></button>
-        <button class="btn btn--pic--chat"></button>
-        <button class="btn btn--pic--profile"></button>
-      </div>
-
-      <div class="mail"><a href="mailto:mail@cps.com">mail@cps.com</a></div>
-
-      <div class="phone"><a href="tel:+78008908900">8 800 890 8900</a></div>
-
-      <div class="lang">
-        <button class="lang__btn lang__btn--active">RU</button>
-        <button class="lang__btn">EN</button>
-        <button class="lang__btn">CH</button>
-      </div>
-
-    </footer>
+    <!-- <div class="swiper-pagination"></div> -->
 
   </section>
 
-  <div class="blure"></div>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
+
+  <script src="script.js"></script>
 
 </body>
 
