--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="img/logo.svg" type="image/x-icon">
   <title>Услуги и сервисы</title>
@@ -11,79 +12,78 @@
 
 <body class="content-wrap">
 
-  <section class="brands swiper">
+  <section class="brands">
 
     <h2 class="brands__title">РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</h2>
 
-    <ol class="brands__list swiper-wrapper">
-      <li class="swiper-slide">
+    <ol class="brands__list">
+      <li>
         <a href="" class="brands__elem">
           <img src="./img/pic-lenovo.svg" alt="">
         </a>
       </li>
-      <li class="swiper-slide">
+      <li>
         <a href="" class="brands__elem">
           <img src="./img/pic-samsung.svg" alt="">
         </a>
       </li>
-      <li class="swiper-slide">
-        <a href="" class="brands__elem brands__elem--pic--apple">
+      <li>
+        <a href="" class="brands__elem">
           <img src="./img/pic-apple.svg" alt="">
         </a>
       </li>
-      <li class="swiper-slide">
-        <a href="" class="brands__elem brands__elem--pic--acer">
+      <li>
+        <a href="" class="brands__elem">
           <img src="./img/pic-acer.svg" alt="">
         </a>
       </li>
-      <li class="swiper-slide">
+      <li>
         <a href="" class="brands__elem">
           <img src="./img/pic-hp.png" alt="">
         </a>
       </li>
-      <li class="swiper-slide">
-        <a href="" class="brands__elem brands__elem--pic--sony">
+      <li>
+        <a href="" class="brands__elem">
           <img src="./img/pic-sony.svg" alt="">
         </a>
       </li>
-      <li class="swiper-slide">
+      <li>
         <a href="" class="brands__elem">
           <img src="./img/pic-lenovo.svg" alt="">
         </a>
       </li>
-      <li class="swiper-slide">
+      <li>
         <a href="" class="brands__elem">
           <img src="./img/pic-samsung.svg" alt="">
         </a>
       </li>
-      <li class="swiper-slide">
-        <a href="" class="brands__elem brands__elem--pic--apple">
+      <li>
+        <a href="" class="brands__elem">
           <img src="./img/pic-apple.svg" alt="">
         </a>
       </li>
-      <li class="swiper-slide">
+      <li>
         <a href="" class="brands__elem brands__elem--pic--acer">
           <img src="./img/pic-acer.svg" alt="">
         </a>
       </li>
-      <li class="swiper-slide">
+      <li>
         <a href="" class="brands__elem">
           <img src="./img/pic-hp.png" alt="">
         </a>
       </li>
     </ol>
 
+    <div class="swiper-pagination"></div>
+
     <button class="expunder brands__expunder">
       <div class="expunder__pic"></div>
       Показать все
     </button>
 
-    <!-- <div class="swiper-pagination"></div> -->
-
   </section>
 
-  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
-
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src="script.js"></script>
 
 </body>
